--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <li><a href="js-exercise/index.html">js-exercise</a></li>
     </ol>
 
-     <ing src="assets/IMG_7662.jpg"width="300px"/>
+     <img src="assets/IMG_7662.jpg"width="300px"/>
     
   
   </body>
