--- a/html-exercise/index.html
+++ b/html-exercise/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <h1>html-exercise</h1>
+    <p>
+      你是个<a href="三流特工.html">三流特工</a>,同时也是个小盗贼，专门祸害些坏人，这天你去了一个<a href="楼层.html">楼层</a>，你翻身一跃就进去了，这是一个<a href="衣柜.html">衣柜</a>引起了你的注意力。
+    </p>
     <a href="../index.html">back</a >
   </body>
 </html>
