--- a/css-exercise/index.html
+++ b/css-exercise/index.html
@@ -7,7 +7,35 @@
     <link rel="icon" href="#" />
   </head>
   <body>
-    <h1>css-exercise</h1>
+
+    <h1>CSS Typography</h1>
+    <ol> 
+      <li><a href="css-basics.html">css-execise</a></li>
+      <li><a href="css-basics1.html">css-exercise</a></li>
+      <li><a href="css-basics2.html">css-exercise</a></li>
+      <li><a href="css-basics3.html">css-exercise</a></li>
+      <li><a href="css-basics4.html">css-exercise</a></li>
+    
+  </ol>
+
+  <h1>CSS Positioning</h1>
+  <ol> 
+    <li><a href="css- Positioning.html">css-execise</a></li>
+    <li><a href="css-Positioning1.html">css-exercise</a></li>
+    <li><a href="css-Positioning2.html">css-exercise</a></li>
+    <li><a href="css-Positioning3.html">css-exercise</a></li>
+    <li><a href="css-Positioning4.html">css-exercise</a></li>
+  
+</ol>
+  <h1>CSS Flexbox & Grid</h1>
+  <ol> 
+    <li><a href="css-Flexbox.html">css-execise</a></li>
+    <li><a href="css-Flexbox1.html">css-exercise</a></li>
+    <li><a href="css-Flexbox2.html">css-exercise</a></li>
+    <li><a href="css-Flesbox3.html">css-exercise</a></li>
+    <li><a href="css-Flexbox4.html">css-exercise</a></li>
+  
+</ol>
     <a href="../index.html">back</a >
   </body>
 </html>
