--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <li><a href="css-exercise/index.html">css-execise</a></li>
         <li><a href="html-exercise/index.html">html-exercise</a></li>
         <li><a href="js-exercise/index.html">js-exercise</a></li>
+        <li><a href="Chuichui Yolo/Chuichui Yolo.html">Chuichui Yolo</a></li>
     </ol>
 
      <img src="assets/IMG_7662.jpg"width="300px"/>
